k8s/base/mlflow/deployment.yaml
# On vérifie que le service renvoie bien une erreur si postgres n'a pas démarré
# Ainsi, grâce au deployement, Kubernetes redémarre automatiquement le pod
# Donc, grâce à ce mécanisme, la dépendance (docker-compose) devient inutile
# Pour tester, on lance kubectl apply -k k8s/mlflow puis kubectl get pods -n accidents-severity -w
# pour voir l'évolution temps réel. Puis sur un autre terminal, on fait 
# kubectl logs -f deployment/mlflow -n accidents-severity pour voir en temps réel
# ce qui se passe et s'assurer que ça plante car le postgres n'est pas ready
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mlflow

  template:
    metadata:
      labels:
        app: mlflow

    spec:
      # Le securityContext définit l'identité du processus dans le conteneur
      # et les permissions d'accès au volume (fsGroup)
      # Remplace les anciens scripts (fix-permissions) de type chown dans Docker Compose
      # Les containers (docker-compose) écrivent avec les droits roots. Pour les volumes
      # partagés, cela générait des conflits de droits car des fichiers étaient root
      # Le fix-permissions permet de fixer les droit users/group dès le début et ainsi les
      # containers qui ont les droits roots ont donc les droits pour écrire dans des répertoires
      # de droits users/groups et donc ne les modifient pas
      # Avec securityContext, on fixe lses droits runAsUser / runAsGroup et donc ils tournent
      # directement en UID cohérents
      # Avec le fsgroup: le volume monté est automatiquement accessible au groupe 1000
      # Kubernetes ajuste les permissions au montage
      securityContext:
        runAsUser: 0
        #runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: mlflow
          image: docker.io/library/accidents_severity-mlflow:1.0
          # Si absente alors on l'a récupère sur le docker hub
          # Evolution dans un env de prod: mettre en place le sytème
          # pour récupérer l'image
          #imagePullPolicy: IfNotPresent
          # Configuration pour forcer l'utilisation de l'image locale
          imagePullPolicy: Never

          ports:
            - containerPort: 5000

          # C'est fait dans l'image dockerfile
          #command: ["/bin/sh", "-c"]
          #args:
          #  - |
          #    rm -rf /app/.dvc /app/dvc.yaml /app/dvc.lock
          #    chown -R 1000:1000 /app/artifacts
          #    mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri ${DATABASE_URL} --default-artifact-root /app/artifacts --allowed-hosts '*' --cors-allowed-origins '*'

          startupProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            failureThreshold: 30   # ~150s max

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            # Prendre en compte les lenteurs
            failureThreshold: 5

          volumeMounts:
            - name: mlflow-artifacts
              mountPath: /app/artifacts

      volumes:
        - name: mlflow-artifacts
          persistentVolumeClaim:
            claimName: mlflow-artifacts-pvc
